# persona-lens

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  dev.sh  pyproject.toml
docs/plans/: 2026-02-22-kol-agent-design.md  2026-02-22-kol-agent-plan.md  2026-02-24-chat-design.md  2026-02-24-chat-plan.md  2026-02-24-frontend-design.md  2026-02-24-frontend-plan.md  2026-02-26-backend-session-management.md  2026-02-26-chat-history-restore.md  2026-02-26-multi-session-design.md  2026-02-26-multi-session-plan.md  2026-02-27-acontext-session-backend-design.md  2026-02-27-acontext-session-backend.md  2026-03-01-agent-skills-design.md  2026-03-01-agent-skills.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-message.tsx  chat-panel.tsx  empty-state.tsx  error-panel.tsx  posting-heatmap.tsx  product-tags.tsx  profile-card.tsx  progress-indicator.tsx  search-bar.tsx  tool-call-indicator.tsx  top-posts.tsx  tweet-list.tsx  writing-style.tsx
frontend/hooks/: use-analysis.ts  use-chat.ts  use-session-manager.ts
frontend/lib/: format.ts  types.ts
persona_lens/: cli.py  models.py  utils.py
persona_lens/agent/: cli.py  context.py  core.py  formatter.py  loop.py  skills.py  tools.py
persona_lens/analyzers/: profile.py  (+5 more)
tests/: test_api_sessions.py  test_chat_history.py  test_content_matcher.py  test_engagement_analyzer.py  test_extract_tweet_data.py  test_patterns.py  test_product_analyzer.py  test_session.py  test_session_backend.py  test_session_crud.py  test_skills.py  test_user_profile_analyzer.py
(+9 files in other folders)
