[project]
name = "persona-lens"
version = "0.1.0"
description = "CLI tool for generating persona analysis reports from X/Twitter profiles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.27",
  "openai>=1.0",
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "openai-agents[sqlalchemy]==0.9.2",
  "aiosqlite>=0.19",
  "greenlet>=3.0",
  "prompt-toolkit>=3.0",
  "python-dotenv",
  "acontext>=0.1",
  "pytest>=8.0",
  "pytest-asyncio>=1.3.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sse-starlette>=1.8",
]

[project.scripts]
persona-lens = "persona_lens.agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
